[package]
name = "ripple-invoke-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.15.8"
dotenv = "0.15.0"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
uuid = { version = "1.14.0", features = ["v4"]}
